[package]
name = "ramis-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
shuttle = []
loom = []

[dependencies]
portable-atomic = { version = "1.11.1" }
spin = { version = "0.12.0" }


[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.9.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

