[package]
name = "ramis-mock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["ramis-core/std", "ramis-schedule/std"]

[dependencies]
ramis-core = { path = "../ramis-core", default-features = false }
ramis-schedule = { path = "../ramis-schedule", default-features = false }
