[package]
name = "ramis-schedule"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["ramis-core/std"]

[dependencies]
ramis-core = { path = "../ramis-core", default-features = false }
smallvec = "1.15.1"
lock_api = { workspace = true }
