[package]
name = "ramis"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = ["std"]
std = ["ramis-core/std", "ramis-schedule/std"]

[dependencies]
ramis-core = { path = "../ramis-core", default-features = false }
ramis-schedule = { path = "../ramis-schedule", default-features = false }

[dev-dependencies]
ramis-mock = { workspace = true }

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.9.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

