[package]
name = "ramis"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = ["std"]
std = ["ramis-core/std", "ramis-schedule/std", "ramis-mock/std"]

[dependencies]
ramis-core = { path = "../ramis-core", default-features = false }
ramis-schedule = { path = "../ramis-schedule", default-features = false }
ramis-mock = { path = "../ramis-mock", default-features = false }

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.9.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

