[package]
name = "reduce"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ramis-core = { workspace = true }
ramis-schedule = { workspace = true }
im = "15.1.0"
dry = { path = "../../perf/dry" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
rand = "0.10.1"
